@startuml

title __CONFIG's Class Diagram__\n

  namespace com.example.springsecurity {
    namespace config {
      class com.example.denoconfig.AppSecurity {
          + AppSecurity()
          + filterChain()
          {static} + passwordEncoder()
          + webSecurityCustomizer()
      }
    }
  }
  

  namespace com.example.springsecurity {
    namespace config {
      class com.example.denoconfig.AuthenticationRequest {
          - password : String
          - username : String
          + AuthenticationRequest()
          + AuthenticationRequest()
          + getPassword()
          + getUsername()
          + setPassword()
          + setUsername()
      }
    }
  }
  

  namespace com.example.springsecurity {
    namespace config {
      class com.example.denoconfig.AuthenticationResponse {
          - accessToken : String
          + AuthenticationResponse()
          + AuthenticationResponse()
          + getAccessToken()
          + getJwtToken()
          + setAccessToken()
      }
    }
  }
  

  namespace com.example.springsecurity {
    namespace config {
      class com.example.denoconfig.JwtAuthenticationFilter {
          - customUserDetailsService : UserDetailsService
          + JwtAuthenticationFilter()
          # doFilterInternal()
      }
    }
  }
  

  namespace com.example.springsecurity {
    namespace config {
      class com.example.denoconfig.JwtUtil {
          - SECRET_KEY : String
          - TOKEN_VALIDITY : long
          + extractExpiration()
          + extractUsername()
          + generateToken()
          + getExpirationDateFromToken()
          + validateToken()
          - extractAllClaims()
          - extractClaim()
          - isTokenExpired()
      }
    }
  }
  

  com.example.denoconfig.AppSecurity o-- com.example.denoconfig.JwtUtil : jwtUtil
  com.example.denoconfig.AppSecurity o-- com.example.denoservice.CustomUserDetailsService : userDetailsService
  com.example.denoconfig.JwtAuthenticationFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  com.example.denoconfig.JwtAuthenticationFilter o-- com.example.denoconfig.JwtUtil : jwtUtil
  com.example.denoconfig.JwtAuthenticationFilter o-- com.example.denoentity.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
